# job_search_agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_discovery.py  0003_phase2b.py  0004_apply_sessions.py  0005_interview_intel.py  0006_outreach.py  0007_analytics.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
tests/: conftest.py  test_adapters.py  test_analytics_funnel.py  test_analytics_recs_snapshots.py  test_analytics_reports.py  test_analytics_runner.py  test_api_analytics.py  test_api_interviews.py  test_api_jobs.py  test_api_outreach.py  test_api_phase2b.py  test_api_validation.py  test_application_agent.py  test_applications.py  test_apply_assist_api.py  test_apply_assist_browser.py  test_apply_assist_runner.py  test_apply_assist_selectors.py  test_apply_assist_session_registry.py  test_ats_scorer.py  test_cli_help.py  test_company_intel.py  test_company_research.py  test_company_research_extras.py  test_config.py  test_discovery_service.py  test_interview_engine.py  test_interview_heuristics.py  test_interview_llm_augment.py  test_interview_questions_bank.py  test_interview_study_planner.py  test_interview_weakness.py  test_llm_client.py  test_logging_setup.py  test_match_engine.py  test_outreach_campaigns.py  test_outreach_contacts.py  test_outreach_llm_polish.py  test_outreach_messages.py  test_pdf_extraction.py  (+9 more)
(+171 files in other folders)
