[project]
name = "jobforge"
version = "0.1.0"
description = "AI-powered resume tailoring agent for job applications"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
]

[project.scripts]
jobforge = "jobforge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-recording>=0.13.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008: Typer/FastAPI use `func(...)` defaults intentionally (DI pattern).
# RUF001: en/em dashes are intentional in salary-range regex (real JD text uses both).
ignore = ["E501", "B008", "RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
